--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,7 @@
-== 0.1.1
+== 0.1.1 2015-09-22
+
+  * Running cpr in main process to avoid pipe errors.
+  * Working gallery.
 
 == 0.1.0 2015-09-02
 
